reduced fixed the font size for the hero buttons on mobile

--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -61,7 +61,7 @@
       font-size: 2.4rem;
 
       @include respond(phone) {
-        font-size: 2rem;
+        font-size: 1.8rem;
       }
     }
   }
